--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
 
   <body>
+    <div id="main"><h1 id="title">Dr. Norman Borlaug</h1></div>
+    
     <h1>Hello World, we are software developers!</h1>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
