--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
   </head>
 
   <body>
-    <div id="main"><h1 id="title">Dr. Norman Borlaug</h1></div>
-    
+    <div id="main">
+      <h1 id="title">Dr. Norman Borlaug</h1>
+      <div id="img-div">
+        <img
+          id="image"
+          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
+          alt="Dr. Norman Borlaug"
+        />
+      </div>
+    </div>
+
     <h1>Hello World, we are software developers!</h1>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
