--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
           src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
           alt="Dr. Norman Borlaug"
         />
+        <p id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.
+        </p>
+        <h3 id="tribute-info"></h3>
       </div>
     </div>
 
